--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
             <div class="video-player-container">
               <div class="video-container">
                 <video id="tutorialVideo">
-                  <source src="/attached_assets/video-information.mp4" type="video/mp4">
+                  <source src="https://ik.imagekit.io/6zsbaguopp/english.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
                 <div class="video-overlay" id="videoOverlay">
